# algo-final-project

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml  tests.py
priority_sorter/: __init__.py  gui.py  items.py  sorter.py
tests/: __init__.py  run_tests.py  test_sorter.py
