[project]
name = "algo-final-project"
version = "0.1.0"
description = "Interactive priority sorter implemented in Python with Tkinter."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tcl>=0.2",
    "tk>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
